fix language dropdown width on mobile

--- a/src/app/mail/mail-header/mail-header.component.scss
+++ b/src/app/mail/mail-header/mail-header.component.scss
@@ -191,12 +191,6 @@
   }
 }
 
-.lang-dropdown.dropdown .dropdown-menu {
-  @include media("<=sm") {
-    width: 65px;
-  }
-}
-
 // == Search form
 .search-form {
   .form-control {
